--- a/src/components/pages/Login/Login.css
+++ b/src/components/pages/Login/Login.css
@@ -5,16 +5,40 @@
     justify-content: center;
 }
 
+.title{
+    color: #000;
+    font-weight: bold;
+}
+
 .form{
     display: flex;
     flex-direction: column;
-
-    height: 40vh;
-
-
     background-color: #FFF;
+
+    padding: 25px 50px;
 }
 
 .label-form{
      
+}
+.input-form{
+    width: 300px;
+    height: 30px;
+
+    font-style: italic;
+    font-size: 0.9rem;
+
+    padding: 5px;
+}
+
+.button-form{
+    width: 300px;
+    height: 30px;
+    background-color: #FFF;
+    color: #000;
+    
+    border: 1px solid #000;
+    border-radius: 10px;
+
+    margin-top: 25px;
 }
